--- a/assets/css/cgs-style.css
+++ b/assets/css/cgs-style.css
@@ -157,8 +157,8 @@ body {
 /*Slider*/
 
 #slider-body {
-    background: #f1f1f1;
-    background-image: url(../img/c-slide-2.jpg);
+    /* background: #f1f1f1; */
+    /* background-image: url(../img/c-slide-2.jpg); */
     height: 100%;
 /*    height: 565px;*/
     background-size: cover;
@@ -167,8 +167,8 @@ body {
 }
 
 #page-slider-body {
-    background: #f1f1f1;
-    background-image: url(../img/cgs-slider-4-inv.jpg);
+    /* background: #f1f1f1; */
+    /* background-image: url(../img/cgs-slider-4-inv.jpg); */
     height: 100%;
 /*    height: 565px;*/
     background-size: cover;
@@ -315,6 +315,13 @@ body {
     background: #f1f1f1;
 }
 
+.section-background-prl {
+    /*    margin-top: 20px;*/
+        padding-top: 50px;
+        padding-bottom: 50px;
+        /* background: #f1f1f1; */
+    }
+
 .section-background {
     padding-top: 50px;
     padding-bottom: 50px;
@@ -353,7 +360,7 @@ body {
 
 /*Why Choose us section*/
 #why-choose-us {
-    background: url(../img/c-slide-5.jpg);
+    /* background: url(../img/c-slide-5.jpg); */
     background-size: cover;
     background-repeat: no-repeat;
     color: black;
@@ -366,7 +373,7 @@ body {
 }
 
 #our-story {
-    background: url(../img/c-slide-5-cut.jpg);
+    /* background: url(../img/c-slide-5-cut.jpg); */
     background-size: cover;
     background-repeat: no-repeat;
     color: black;
